# deltax-rs

./: .dockerignore  .env  .gitignore  Cargo.toml  Dockerfile  README.Docker.md  README.md  compose.yaml  deltax-rs.code-workspace
backend/: .gitignore  Cargo.toml  Dockerfile
backend/migrations/2025-03-31-023833_create_images/: down.sql  up.sql
backend/src/: images.rs  lib.rs  main.rs  models.rs  schema.rs
backend/static/: images.html  index.html  videos.html
frontend/: .dockerignore  .eslintrc.js  .gitignore  Dockerfile.frontend  next.config.ts  package-lock.json  package.json  pnpm-lock.yaml
frontend/app/: layout.tsx  loading.tsx  page.tsx
frontend/app/components/: TestComponent.jsx
frontend/app/images/: page.tsx
frontend/app/ui/: Navbar.tsx
frontend/app/videos/: page.tsx
src/: main.rs
static/: index.html
styles/: index.css
