[package]
name = "deltax-rs"
version = "0.1.0"
edition = "2024"

# target = "wasm32-unknown-unknown"
# build-script = "build.rs"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
axum = "0.8.3"
# leptos = "0.7.8"
tokio = { version = "1.44.1", features = ["full"] }
tower = "0.5.2"
tower-http = { version = "0.6.2", features = ["fs", "cors"] }
tracing = "0.1.41" # Application-level tracing for Rust.
# trunk = { version = "0.21.9", features = ["tailwindcss"] }

# Utilities for implementing and composing `tracing` subscribers. 
tracing-subscriber = { version = "0.3.19", features = ["env-filter"] } 

diesel = { version = "2.2.8", features = ["postgres"] }
# build libpq and openssl as part of the build process
# uncomment these lines if you run into setup issues
# pq-sys = { version = "0.7.1", features = ["bundled"] }
pq-sys = "0.7.1"
openssl-sys = { version = "0.9.106", features = ["vendored"] } 
# openssl-sys = "0.9.106"
serde = { version = "1.0.219", features = ["derive"] }

# dotenvy for environment variables
dotenvy = "0.15.7"

[[bin]]
name = "deltax"
path = "src/main.rs"

# [package.metadata.leptos]
# The name used by wasm-bindgen/cargo-leptos for the JS/WASM bundle. Defaults to the crate name
# output-name = "deltax-rs"  # Note this value here!!

# Activates the tailwind build
# tailwind-input-file = "style/tailwind.css"
# tailwind-config-file = "tailwind.config.js"
